@@ -1,5 +1,10 @@
 2004-08-25 Chris Wiebe
 
+	Got rid of little 'C' icons on the editor preference pages
+	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencePage.java
+
+2004-08-25 Chris Wiebe
+
 	Fix AddInclude action to resolve paths correctly
 	* src/org/eclipse/cdt/internal/ui/editor/AddIncludeOnSelectionAction.java
 
